fix(hero): Adjusted bg hero on mobile resolution

--- a/Frontend/layout/_hero.sass
+++ b/Frontend/layout/_hero.sass
@@ -11,3 +11,7 @@
 
   .container 
     padding: 0 10px
+
+  @media (max-width: $mobile) 
+    background-position: 80% 80%
+    background-size: 640px
