--- a/style/style.css
+++ b/style/style.css
@@ -170,6 +170,12 @@
 .b-hero .container {
   padding: 0 10px;
 }
+@media (max-width: 568px) {
+  .b-hero {
+    background-position: 80% 80%;
+    background-size: 640px;
+  }
+}
 
 .b-content .container {
   max-width: 1280px;
